src/test/ui/type-alias-impl-trait/structural-match-no-leak.stderr
error: constant pattern depends on a generic parameter
  --> $DIR/structural-match-no-leak.rs:14:9
   |
LL |         LEAK_FREE => (),
   |         ^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/structural-match-no-leak.rs:14:9
   |
LL |         LEAK_FREE => (),
   |         ^^^^^^^^^

error: aborting due to 2 previous errors

